--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,16 @@
 {
   "presets": [
-    ["es2015", { "modules": "commonjs" }]
+    [
+      "latest",
+      {
+        "es2017": false,
+        "es2015": {
+          "modules": false
+        }
+      }
+    ]
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
